--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       Tutorial Case
 
       DLR Nightly Schedule
-      Author: 
-      Date:   
+      Author: Gabriel Fuentes 
+      Date: 12.6.18   
 
-      Filename:   dlr_evenings.html
+      Filename:   index.html
 
    -->
    
@@ -19,6 +19,7 @@
    <title>DLR Nightly Schedule</title>
    <link href="dlr_reset.css" rel="stylesheet" />
    <link href="dlr_styles.css" rel="stylesheet" />     
+   <link href="dlr_tables.css" rel="stylesheet" />     
 </head>
 
 <body>
@@ -50,6 +51,39 @@
             of our broadcast. Please refer below for our current 
             nightly schedule.</p>
          
+            <table class="schedule">
+                  <tr>
+                        <th>Time</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                        <th>Sunday</th>
+                  </tr>
+                  <tr>
+                        <th>6:00 PM</th>
+                        <td>National News</td>
+                        <td>National News</td>
+                        <td>National News</td>
+                        <td>National News</td>
+                        <td>National News</td>
+                        <td>National News</td>
+                        <td>National News</td>
+                  </tr>
+                  <tr>
+                        <th>6:30 PM</th>
+                        <td>World News</td>
+                        <td>World News</td>
+                        <td>World News</td>
+                        <td>World News</td>
+                        <td>World News</td>
+                        <td>World News</td>
+                        <td>World News</td>
+                  </tr>
+            </table>
+
       </section>
       
       <section id="right">
